Setup r3 router and fake rack

--- a/docker/conf/nginx.conf
+++ b/docker/conf/nginx.conf
@@ -21,7 +21,7 @@ http {
     tcp_nopush on;
     tcp_nodelay on;
 
-    mruby_init_worker /usr/local/nginx/hook/run.rb cache;
+    mruby_init_worker /usr/local/nginx/hook/init.rb;
 
     server {
         listen       80;
@@ -29,12 +29,12 @@ http {
 
 
         location / {
-            mruby_content_handler /usr/local/nginx/hook/exec.rb cache;
+            mruby_content_handler /usr/local/nginx/hook/run.rb cache;
         }
 
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
+        # error_page   500 502 503 504  /50x.html;
+        # location = /50x.html {
+        #     root   html;
+        # }
     }
 }
