--- a/docker/conf/nginx.conf
+++ b/docker/conf/nginx.conf
@@ -30,6 +30,7 @@ http {
 
         location / {
             mruby_content_handler /usr/local/nginx/hook/run.rb cache;
+            # mruby_content_handler /usr/local/nginx/hook/run.rb;
         }
 
         # error_page   500 502 503 504  /50x.html;
