--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,9 @@ services:
     volumes:
       - ./docker/hook:/usr/local/nginx/hook
       - ./docker/conf/nginx.conf:/usr/local/nginx/conf/nginx.conf
+  redis:
+    image: redis
+    volumes:
+      - redis_tmp:/tmp
+volumes:
+  tmp:
