--- a/docker/conf/nginx.conf
+++ b/docker/conf/nginx.conf
@@ -5,7 +5,7 @@ worker_rlimit_nofile 100000;
 error_log off;
 
 events {
-    worker_connections 4000;
+    worker_connections 8000;
     multi_accept on;
     use epoll;
 }
@@ -21,7 +21,7 @@ http {
     tcp_nopush on;
     tcp_nodelay on;
 
-    mruby_init_worker /usr/local/nginx/hook/init.rb;
+    mruby_init /usr/local/nginx/hook/init.rb cache;
 
     server {
         listen       80;
