--- a/docker/conf/nginx.conf
+++ b/docker/conf/nginx.conf
@@ -29,6 +29,7 @@ http {
 
 
         location / {
+            mruby_enable_read_request_body on;
             mruby_content_handler /usr/local/nginx/hook/run.rb cache;
             # mruby_content_handler /usr/local/nginx/hook/run.rb;
         }
